--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ a, p, small {
     font-weight: 300;
     font-size: 180px;
     text-align: center;
-    margin: 0;
+    margin: 0 30px;
     letter-spacing: 20px;
     padding-top: 15px;
 }
@@ -82,13 +82,15 @@ a, p, small {
 
 }
 
-.timeline h2 {
+.timeline h2, .customize h2, .customize h3 {
     text-align: center;
     font-size: 60px;
     font-weight: 300;
     letter-spacing: 7px;
     padding-top: 70px;
     margin-bottom: 120px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
 .timeline h3 {
@@ -198,6 +200,20 @@ a, p, small {
     height: 100vh;
 }
 
+.customize h2 {
+    font-size: 40px;
+    margin-bottom: 0px;
+
+}
+
+.customize h3 {
+    font-size: 20px;
+    margin-top: 0px;
+
+}
+
+
+
 .close-up-wheel {
     height: 100vh;
     background-color: #1d1d1d;
@@ -231,6 +247,19 @@ a, p, small {
     width: 100%;
     height: auto;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media screen and (max-width: 800px) {
