--- a/css/styles.css
+++ b/css/styles.css
@@ -362,10 +362,11 @@ a, p, small {
     color: #0e0e0e;
     transition: 0.5s ease all;
     border: solid 1px #0e0e0e;
+    text-decoration: none;
 }
 
 .buy-btn:hover {
-
+    background-color: #efefef;
 }
 
 
