--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,52 @@ a, p, small {
 
 }
 
+header {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    transition: all ease 2s;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+
+}
+
+header nav ul {
+    display: flex;
+    margin-right: 50px;
+}
+
+header a {
+    color: #f4f4f4;
+    font-size: 20px;
+    text-decoration: none;
+    border-bottom: transparent solid 0.5px;
+    transition: all ease 0.1s;
+}
+
+header a:hover {
+    border-bottom: #f4f4f4 solid 0.5px;
+}
+
+.show-header {
+    opacity: 1;
+}
+
+header ul {
+    list-style: none;
+}
+
+header ul li {
+    margin: 0 20px;
+}
+
+
+
 .masthead-image {
     background-size: cover;
     background-repeat: no-repeat;
@@ -216,7 +262,7 @@ a, p, small {
 .customize-img {
     width: 500px;
     height: auto;
-    margin: 0 30px 120px 30px;
+    margin: 0 30px 75px 30px;
 }
 
 .car-trim-btn-container {
@@ -417,7 +463,7 @@ a, p, small {
 }
 
 .quattro-text p {
-    font-size: 18px;
+    font-size: 22px;
     font-family: 'PT Sans Narrow', sans-serif;
     text-align: center;
     margin: 0 30px;
@@ -504,8 +550,34 @@ a, p, small {
 
 
 
-.tbd {
-    height: 100vh;
+.specs {
+    height: 900px;
+}
+
+.specs-details {
+    margin-top: 190px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.specs-details h3 {
+    font-size: 50px;
+    font-weight: 300;
+    text-align: center;
+    margin: 30px 30px;
+    letter-spacing: 3px;
+}
+
+.specs-details h3 span {
+    font-weight: 600;
+}
+
+.specs-details small {
+    margin-top: 50px;
+    font-size: 16px;
 }
 
 
@@ -534,7 +606,7 @@ a, p, small {
     text-align: center;
     font-size: 30px;
     letter-spacing: 2px;
-    transition: 0.5s all ease;
+    transition: 0.8s all ease;
     text-decoration: none;
 }
 
