--- a/css/styles.css
+++ b/css/styles.css
@@ -623,7 +623,7 @@ header ul li {
     transition: 0.8s all ease;
     text-decoration: none;
     position: absolute;
-    margin-top: 85px;
+    margin-top: 95px;
 }
 
 .test-drive-btn:hover {
@@ -633,10 +633,23 @@ header ul li {
 
 .test-drive h2 {
     color: #f4f4f4;
-    margin-bottom: 120px;
-    font-size: 30px;
+    margin-bottom: 170px;
+    font-size: 40px;
     position: absolute;
 }
+
+.inventory {
+    height: 700px;
+    text-align: center;
+}
+
+.inventory h2 {
+    font-size: 45px;
+    font-weight: 300;
+    margin-top: 100px;
+}
+
+
 
 
 footer {
@@ -660,6 +673,8 @@ footer img {
     height: 60px;
     margin: 10px;
 }
+
+
 
 footer address {
     font-style: normal;
@@ -752,18 +767,15 @@ footer i {
     /* nav menu */
     header div:nth-child(3) {
         position: absolute;
-        width: 100%;
+        width: 300px;
         height: 100vh;
         display: flex;
         top: 100%;
+        left: 100%;
         justify-content: flex-end;
         transition: 0.5s all ease;
-
     }
 
-    .add-menu-bg {
-        background-color: rgba(0, 0, 0, 0.5);
-    }
 
     .darken-header {
         background-color: rgba(0, 0, 0, 0.8);
@@ -788,17 +800,32 @@ footer i {
         padding: 40px 18px;
         width: 200px;
         margin-top: 0px;
-        translate: 290px 0;
+        translate: -10px 0;
         position: relative;
         transition: 0.5s all ease;
     }
 
     .open-menu {
-        translate: 50px 0;
+        translate: -250px 0;
     }
 
     header {
         justify-content: space-between;
+    }
+
+    .wrapper {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        z-index: -999;
+        background-color: transparent;
+
+
+    }
+
+    .wrapper-active {
+        z-index: 99;
+        background-color: rgba(0, 0, 0, 0.5);
     }
 }
 
@@ -868,3 +895,4 @@ footer i {
 
 
 }
+
