--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,10 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 70px;
+}
 
+#static-header {
+    opacity: 1;
 }
 
 header nav ul {
@@ -763,6 +766,57 @@ footer i {
 .address-container div:nth-child(3) {
     display: flex;
 }
+
+
+.secondary-masthead {
+    background-color: #0e0e0e;
+    width: 100%;
+    height: 500px;
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 45px;
+    background-image: url("../img/red-audi-r8.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.about h1 {
+   color: #f4f4f4;
+    font-size: 150px;
+}
+
+.about-audi {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    border-top: #afafaf solid 15px;
+
+}
+
+.about-audi h2 {
+    font-size: 50px;
+    font-weight: 300;
+}
+
+.about-audi p {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 25px;
+    margin: 0 auto;
+    padding: 0 30px;
+    text-align: center;
+    max-width: 800px;
+    line-height: 36px;
+
+}
+
+
+
+
+
 
 @media screen and (max-width: 1170px) {
 
