--- a/css/styles.css
+++ b/css/styles.css
@@ -464,6 +464,7 @@ header ul li {
     font-weight: 300;
     text-align: center;
     text-shadow: 0.5px 0.5px 0.5px #0e0e0e;
+    letter-spacing: 5px;
 }
 
 .quattro-text h3 {
@@ -471,6 +472,7 @@ header ul li {
     color: #0e0e0e;
     font-size: 25px;
     text-align: center;
+    letter-spacing: 1px;
 }
 
 .quattro-text p {
@@ -478,6 +480,7 @@ header ul li {
     font-family: 'PT Sans Narrow', sans-serif;
     text-align: center;
     margin: 0 30px;
+    letter-spacing: 1px;
 }
 
 .quattro-text small {
@@ -639,6 +642,7 @@ header ul li {
     margin-bottom: 170px;
     font-size: 40px;
     position: absolute;
+    letter-spacing: 2px;
 }
 
 .inventory {
@@ -654,10 +658,12 @@ header ul li {
     font-size: 55px;
     font-weight: 300;
     margin-top: -100px;
+    letter-spacing: 6px;
 }
 
 .inventory h3 {
     font-size: 30px;
+    letter-spacing: 2px;
 }
 
 .plus {
@@ -666,10 +672,12 @@ header ul li {
 
 .inventory p {
     margin: 0 30px;
-    font-size: 20px;
-    font-family: 'Chakra Petch', sans-serif;
+    font-size: 23px;
+    font-family: 'PT Sans Narrow', sans-serif;
     margin: 60px auto 70px auto;
     max-width: 900px;
+    line-height: 29px;
+    letter-spacing: 1px;
 }
 
 
@@ -726,6 +734,7 @@ footer {
 footer a, footer small {
     color: #f4f4f4;
     font-size: 18px;
+    letter-spacing: 0.5px;
 }
 
 footer img {
@@ -740,6 +749,7 @@ footer address {
     font-style: normal;
     font-family: 'Alumni Sans', sans-serif;
     font-size: 18px;
+    letter-spacing: 0.5px;
 }
 
 .address-container {
@@ -785,6 +795,7 @@ footer i {
 .about h1, .contact h1 {
    color: #f4f4f4;
     font-size: 150px;
+    letter-spacing: 10px;
 }
 
 .about-audi, .contact-audi {
@@ -792,7 +803,7 @@ footer i {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 700px;
+    height: 600px;
     border-top: #afafaf solid 15px;
 }
 
@@ -803,6 +814,7 @@ footer i {
 .about-audi h2, .contact-audi h2 {
     font-size: 50px;
     font-weight: 300;
+    letter-spacing: 3px;
 }
 
 .contact-audi h2 {
@@ -810,13 +822,14 @@ footer i {
 }
 
 .about-audi p, .contact-audi p {
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: 'PT Sans Narrow', sans-serif;
     font-size: 25px;
     margin: 0 auto;
     padding: 0 30px;
     text-align: center;
     max-width: 800px;
     line-height: 36px;
+    letter-spacing: 1px;
 
 }
 
@@ -831,6 +844,7 @@ footer i {
     font-family: 'Alumni Sans', sans-serif;
     font-size: 22px;
     width: 80px;
+    letter-spacing: 1px;
 }
 
 .contact-form {
@@ -863,12 +877,105 @@ footer i {
     cursor: pointer;
     transition: 0.5s ease all;
     background-color: #d7d7d7;
+    letter-spacing: 1px;
 }
 
 .contact-form button:hover {
     background-color: #cccccc;
 }
 
+.product-masthead {
+    height: 80vh;
+    width: 100%;
+    background-image: url("../img/audi-r8-headlight.jpg");
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.product-masthead h1 {
+    color: #f4f4f4;
+    font-size: 70px;
+    margin: 0 0 40px 50px;
+    letter-spacing: 2px;
+
+}
+
+.product-masthead h1 span {
+    display: block;
+    margin-bottom: 30px;
+    padding: 10px;
+    background-color: #4b4b4b;
+    font-size: 40px;
+    width: 250px;
+}
+
+.configurations {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.configurations h2 {
+    font-weight: 300;
+    margin-top: 110px;
+    margin-bottom: 50px;
+    letter-spacing: 7px;
+    font-size: 40px;
+}
+
+.configurations p {
+    font-size: 25px;
+    font-family: 'PT Sans Narrow', sans-serif;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    letter-spacing: 1px;
+}
+
+select {
+    font-family: 'Alumni Sans', sans-serif;
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
+td {
+    font-family: 'PT Sans Narrow', sans-serif;
+    background-color: #ececec;
+    font-size: 20px;
+    padding: 25px;
+}
+
+td span {
+    display: block;
+}
+
+.mobile-table {
+    display: none;
+}
+
+table tr:nth-child(1) td {
+    font-weight: bold;
+}
+
+.desktop-table {
+    max-width: 900px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.desktop-table td {
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: center;
+}
+
+table {
+    margin-bottom: 60px;
+}
 
 
 @media screen and (max-width: 1170px) {
@@ -990,6 +1097,22 @@ footer i {
     .wrapper-active {
         z-index: 99;
         background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .mobile-table {
+        display: block;
+    }
+
+    .desktop-table {
+        display: none;
+    }
+
+    table td:nth-child(1) {
+        font-weight: bold;
+    }
+
+    table tr:nth-child(1) td:nth-child(2) {
+        font-weight: normal;
     }
 }
 
