--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ header ul li {
 
 .masthead-title {
     background-color: black;
+    margin-top: -2px;
 
 }
 
@@ -114,7 +115,7 @@ header ul li {
     font-weight: 300;
     font-size: 40px;
     text-align: center;
-    margin: 0;
+    margin: 0 50px;
     letter-spacing: 7px;
     padding-top: 20px;
     padding-bottom: 170px;
@@ -195,7 +196,6 @@ header ul li {
     padding: 5px;
     background-color: white;
     border: #0e0e0e dotted 2px;
-
 }
 
 /* adjust generation images on right right side */
@@ -243,9 +243,8 @@ header ul li {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 60%;
-
+    background-position-x: center;
     background-attachment: fixed;
-    /*test parallax on mobile*/
 }
 
 .customize {
@@ -423,9 +422,6 @@ header ul li {
 }
 
 
-
-
-
 .close-up-wheel {
     height: 100vh;
     background-color: #1d1d1d;
@@ -433,9 +429,8 @@ header ul li {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
     background-attachment: fixed;
-    /*test parallax on mobile*/
+
 }
 
 .quattro {
@@ -458,7 +453,7 @@ header ul li {
 }
 
 .quattro-text h2 {
-    margin-top: 30px;
+    margin-top: 0px;
     color: #f4f4f4;
     font-size: 95px;
     font-weight: 300;
@@ -476,7 +471,8 @@ header ul li {
 }
 
 .quattro-text p {
-    font-size: 22px;
+    font-size: 23px;
+    line-height: 29px;
     font-family: 'PT Sans Narrow', sans-serif;
     text-align: center;
     margin: 0 30px;
@@ -495,6 +491,7 @@ header ul li {
     position: absolute;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
@@ -521,7 +518,7 @@ header ul li {
 
     100%{
         opacity: 0;
-        transform: translate(20px, 95vh) rotateZ(360deg);
+        transform: translate(0, 95vh) rotateZ(30deg);
     }
 }
 
@@ -639,10 +636,11 @@ header ul li {
 
 .test-drive h2 {
     color: #f4f4f4;
-    margin-bottom: 170px;
+    margin: 0 30px 170px 30px;
     font-size: 40px;
     position: absolute;
     letter-spacing: 2px;
+    text-align: center;
 }
 
 .inventory {
@@ -664,6 +662,7 @@ header ul li {
 .inventory h3 {
     font-size: 30px;
     letter-spacing: 2px;
+    margin: 20px 30px;
 }
 
 .plus {
@@ -674,7 +673,7 @@ header ul li {
     margin: 0 30px;
     font-size: 23px;
     font-family: 'PT Sans Narrow', sans-serif;
-    margin: 60px auto 70px auto;
+    margin: 60px 30px 70px 30px;
     max-width: 900px;
     line-height: 29px;
     letter-spacing: 1px;
@@ -821,6 +820,7 @@ footer i {
     font-size: 50px;
     font-weight: 300;
     letter-spacing: 3px;
+    margin-top: -30px;
 }
 
 .contact-audi h2 {
@@ -829,12 +829,12 @@ footer i {
 
 .about-audi p, .contact-audi p {
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 25px;
+    font-size: 23px;
     margin: 0 auto;
     padding: 0 30px;
     text-align: center;
     max-width: 800px;
-    line-height: 36px;
+    line-height: 29px;
     letter-spacing: 1px;
 
 }
@@ -994,6 +994,14 @@ table {
     margin-bottom: 60px;
 }
 
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1285px){
+    .quattro-text h2 {
+        margin-top: 90px;
+    }
+
+}
 
 @media screen and (max-width: 1170px) {
 
@@ -1009,10 +1017,22 @@ table {
         /* height set via JS */
     }
 
+    .quattro-text h2 {
+        margin-top: 125px;
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
+    .quattro-text small {
+        margin-top: 25px;
+    }
+
+    .quattro-text h3 {
+        margin-top: -30px;
+    }
+
 
 }
-
-
 
 
 
@@ -1028,6 +1048,10 @@ table {
     /* adjust generation images on right right side */
     .timeline-right img {
         left: 15px;
+    }
+
+    .right-arrow, .left-arrow {
+        margin-top: -20px;
     }
 
 }
@@ -1088,13 +1112,13 @@ table {
         padding: 40px 18px;
         width: 200px;
         margin-top: 0px;
-        translate: -10px 0;
+        margin-right: 10px;
         position: relative;
         transition: 0.5s all ease;
     }
 
     .open-menu {
-        translate: -250px 0;
+        margin-right: 300px;
     }
 
     header {
@@ -1131,6 +1155,39 @@ table {
     table tr:nth-child(1) td:nth-child(2) {
         font-weight: normal;
     }
+
+    /* disable parallax on mobile */
+    .close-up-wheel, .close-up-logo {
+        background-attachment: scroll;
+
+    }
+
+    .inventory-btn-container {
+        flex-direction: column;
+    }
+
+    .inventory-btn-container a {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .test-drive h2 {
+        margin: 0 30px 150px 30px;
+        font-size: 30px;
+    }
+
+    .inventory h2 {
+        font-size: 45px;
+        font-weight: 300;
+        margin-top: 0px;
+        margin-right: 30px;
+        margin-left: 30px;
+        padding-top: 100px;
+    }
+
+    .inventory-btn-container {
+        margin-bottom: 100px;
+    }
 }
 
 @media screen and (max-width: 700px) {
@@ -1151,6 +1208,36 @@ table {
     .timeline-right {
         margin-left: 90px;
     }
+
+    .inventory {
+        height: auto;
+    }
+
+
+}
+
+@media screen and (max-width: 660px) {
+    .quattro-text h2 {
+        margin-top: 150px;
+        font-size: 75px;
+    }
+
+    .quattro-text h3 {
+        margin-top: -15px;
+    }
+
+    .quattro-text small {
+        margin-top: 15px;
+    }
+
+    .customize-img {
+        width: 400px;
+    }
+
+    .masthead-title h2 {
+        padding-bottom: 130px;
+    }
+
 
 }
 
@@ -1188,15 +1275,230 @@ table {
         border-right: 17px solid #e1e1e1;
         border-left: 17px solid transparent;
         position: absolute;
-        top: 65px;
+        top: 85px;
         left: 0px;
         margin-left: -8.5px;
+
         width: 0px;
+    }
+
+    @media screen and (max-width: 610px) {
+
+        .quattro-text h2 {
+            margin-top: -160px;
+            font-size: 95px;
+            color: #0e0e0e;
+            text-shadow: none;
+        }
+
+        .quattro-text h3 {
+            margin: 0px 30px 85px 30px;
+            font-size: 35px;
+            color: #f4f4f4;
+        }
+
+        .quattro-text small {
+            margin-top: 15px;
+        }
+
+        .test-drive h2 {
+            margin: 0 30px 100px 30px;
+            font-size: 25px;
+        }
+
+    }
+
+    @media screen and (max-width: 550px) {
+
+        .specs-details h3 {
+            font-size: 40px;
+            margin: 30px 45px;
+        }
+
+
+        .specs-details small {
+            margin-top: 50px;
+            font-size: 16px;
+        }
+    }
+    @media screen and (max-width: 515px) {
+        .timeline h2 {
+            font-size: 50px;
+        }
+
+        .address-container div {
+            margin: 0 10px;
+        }
+
+        .specs {
+            height: 600px;
+        }
+
+        .specs-details h3 {
+            margin-top: 0;
+        }
+    }
+
+
+    @media screen and (max-width: 470px) {
+        .customize-img {
+            width: 350px;
+        }
+
+        .masthead-title h2 {
+            margin-right: 20px;
+            margin-left: 20px;
+        }
+
+        .specs-details h3 {
+            font-size: 35px;
+        }
+
+        .specs-details  {
+            margin-top: 270px;
+        }
+
+        .test-drive-btn {
+            width: 240px;
+            height: 60px;
+            font-size: 30px;
+            margin-top: 70px;
+        }
+
+        .address-container {
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
+
+        .address-container small, .address-container address {
+            font-size: 25px;
+
+        }
+
+        .address-container div {
+            margin-top: 10px;
+
+        }
+
+        .copyright-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+
+    }
+
+
+    @media screen and (max-width: 425px) {
+        .quattro-text h2 {
+            margin-top: -100px;
+            font-size: 75px;
+        }
+
+        .quattro-text p {
+            margin-top: 0px
+        }
+
+        .specs {
+            height: 650px;
+        }
+
+        .specs-details  {
+            margin-top: 270px;
+        }
+    }
+
+    @media screen and (max-width: 410px) {
+        .customize-img {
+            width: 310px;
+        }
+
+
     }
 
 
 
+    @media screen and (max-width: 395px) {
+        .timeline h2 {
+            font-size: 38px;
+            margin: -10px 15px 60px 15px;
 
+        }
+    }
+
+
+    @media screen and (max-width: 360px) {
+        .timeline-element img {
+            width: 100px;
+            height: 100px;
+
+        }
+        .timeline-bar {
+            left:75px;
+
+        }
+
+        .timeline-element div {
+            margin-left: -15px;
+        }
+
+       .left-arrow {
+           margin-left: -27px;
+           margin-top: -10px;
+       }
+
+        .right-arrow {
+            margin-left: -10px;
+            margin-top: -30px;
+        }
+
+        .inventory h2 {
+            font-size: 40px;
+        }
+
+        .inventory-btn-container a {
+            width: 200px;
+
+        }
+    }
+
+
+
+    @media screen and (max-width: 350px) {
+        .customize-img {
+            width: 290px;
+        }
+
+        .timeline-element img {
+            width: 90px;
+            height: 90px;
+
+        }
+        .timeline-bar {
+            left: 70px;
+
+        }
+
+        .timeline-element div {
+            margin-left: -38px;
+            margin-right: 60px;
+        }
+
+        .left-arrow {
+            margin-left: -47px;
+        }
+
+        .right-arrow {
+            margin-left: -30px;
+        }
+
+        .timeline-element p {
+            font-size: 15px;
+        }
+
+    }
 
 }
 
