--- a/css/styles.css
+++ b/css/styles.css
@@ -820,7 +820,8 @@ footer i {
     font-size: 50px;
     font-weight: 300;
     letter-spacing: 3px;
-    margin-top: -30px;
+    margin: -30px 30px 50px 30px;
+    text-align: center;
 }
 
 .contact-audi h2 {
@@ -884,6 +885,12 @@ footer i {
     transition: 0.5s ease all;
     background-color: #d7d7d7;
     letter-spacing: 1px;
+    text-align: center;
+    color: #0e0e0e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
 }
 
 .contact-form button:hover {
@@ -996,6 +1003,8 @@ table {
 
 /* MEDIA QUERIES */
 
+
+
 @media screen and (max-width: 1285px){
     .quattro-text h2 {
         margin-top: 90px;
@@ -1034,8 +1043,29 @@ table {
 
 }
 
+@media screen and (max-width: 1130px) {
+    .contact h1 {
+        font-size: 120px;
+        letter-spacing: 8px;
+    }
 
+    .about h1 {
+        font-size: 130px;
+        letter-spacing: 8px;
+    }
+}
 
+@media screen and (max-width: 850px) {
+    .contact h1 {
+        font-size: 80px;
+        letter-spacing: 6px;
+    }
+
+    .about h1 {
+        font-size: 100px;
+        letter-spacing: 6px;
+    }
+}
 
 @media screen and (max-width: 800px) {
 
@@ -1053,6 +1083,8 @@ table {
     .right-arrow, .left-arrow {
         margin-top: -20px;
     }
+
+
 
 }
 
@@ -1162,11 +1194,11 @@ table {
 
     }
 
-    .inventory-btn-container {
+    .inventory-btn-container, .product-btn-container  {
         flex-direction: column;
     }
 
-    .inventory-btn-container a {
+    .inventory-btn-container a, .product-btn-container a {
         display: block;
         margin-bottom: 10px;
     }
@@ -1187,6 +1219,11 @@ table {
 
     .inventory-btn-container {
         margin-bottom: 100px;
+    }
+
+    .product-masthead {
+        height: 80vh;
+        width: 100%;
     }
 }
 
@@ -1238,6 +1275,26 @@ table {
         padding-bottom: 130px;
     }
 
+
+    .about h1, .contact h1 {
+        font-size: 60px;
+        letter-spacing: 4px;
+        margin-left: 30px;
+        margin-right: 30px;
+        text-align: center;
+    }
+
+    .about h1 {
+        font-size: 80px;
+    }
+
+    .product-masthead h1 {
+        margin: 0px 0 20px 20px;
+    }
+
+    .product-masthead h1 span {
+        margin-bottom: 3px;
+    }
 
 }
 
@@ -1304,6 +1361,10 @@ table {
         .test-drive h2 {
             margin: 0 30px 100px 30px;
             font-size: 25px;
+        }
+
+        .color-bar {
+           width: 95%;
         }
 
     }
@@ -1387,6 +1448,15 @@ table {
             flex-wrap: wrap;
         }
 
+        .contact-form {
+            width: 300px;
+        }
+
+        .contact-form textarea, .contact-form input {
+            width: 200px;
+
+
+        }
 
     }
 
@@ -1415,6 +1485,14 @@ table {
             width: 310px;
         }
 
+        .configurations h2 {
+            font-size: 30px;
+        }
+
+        .mobile-table {
+            margin-right: 20px;
+            margin-left: 30px;
+        }
 
     }
 
@@ -1424,6 +1502,16 @@ table {
         .timeline h2 {
             font-size: 38px;
             margin: -10px 15px 60px 15px;
+
+        }
+
+        .contact-form {
+            width: 260px;
+        }
+
+        .contact-form textarea, .contact-form input {
+            width: 170px;
+
 
         }
     }
@@ -1458,7 +1546,7 @@ table {
             font-size: 40px;
         }
 
-        .inventory-btn-container a {
+        .inventory-btn-container a, .product-btn-container a {
             width: 200px;
 
         }
