--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
+/*** FONTS ***/
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&family=PT+Sans+Narrow:wght@400;700&display=swap');
 
+/*** GENERAL STYLES ***/
 html, body {
     overflow-x: hidden;
 }
@@ -18,39 +20,7 @@ a, p, small {
     font-family: 'Alumni Sans', sans-serif;
 }
 
-/*** CUSTOM SCROLLBAR ***/
-/* Firefox */
-html {
-    scrollbar-width: none;
-}
-
-/* all other browsers */
-::-webkit-scrollbar {
-    width: 0;
-}
-
-#scrollbar-thumb {
-    width: 11px;
-    height: auto;
-    position: absolute;
-    right: 2px;
-    z-index: 1000;
-    filter: drop-shadow(1px 1px 1px rgba(14, 14, 14, 0.42));
-}
-
-#thumb-container {
-    height: 100vh;
-    /*background-color: rgba(225, 225, 225, 0.25);*/
-    width: 17px;
-    position: fixed;
-    right: 0;
-    z-index: 999;
-    border-radius: 15px;
-    /*border: 0.5px solid #b9b9b9;*/
-    opacity: 0;
-    transition: .8s ease all;
-}
-
+/*** HEADER ***/
 header {
     position: fixed;
     z-index: 999;
@@ -104,12 +74,12 @@ header ul li {
     margin: 0 20px;
 }
 
+/*** MASTHEAD ***/
 .masthead-image {
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: 65%;
     background-image: url("../img/r8-front-view.jpg");
-    height: 100vh;
     background-color: black;
 }
 
@@ -123,7 +93,6 @@ header ul li {
     background-color: black;
     margin-top: -2px;
     position: relative;
-
 }
 
 .masthead-title h1 {
@@ -148,6 +117,7 @@ header ul li {
     padding-bottom: 170px;
 }
 
+/*** TIMELINE ***/
 .timeline {
     padding: 20px 30px 110px 30px;
     position: relative;
@@ -275,6 +245,7 @@ header ul li {
     align-items: center;
 }
 
+/*** INTERACTIVE CAR CUSTOMIZATION ***/
 .customize h2 {
     font-size: 40px;
     margin-bottom: 0px;
@@ -508,7 +479,7 @@ header ul li {
     justify-content: space-around;
 }
 
-/* snow animation */
+/*** SNOW ANIMATION ***/
 .snowflake {
     width: 12px;
     height: 12px;
@@ -1039,6 +1010,50 @@ table {
     .about h1 {
         font-size: 130px;
         letter-spacing: 8px;
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    /*** CUSTOM SCROLLBAR ***/
+    /* Firefox */
+    html {
+        scrollbar-width: none;
+        -ms-overflow-style: none; /* IE and Edge */
+    }
+
+    /* all other browsers */
+    ::-webkit-scrollbar {
+        width: 0;
+    }
+
+    #scrollbar-thumb {
+        width: 13px;
+        height: auto;
+        position: absolute;
+        right: 2px;
+        z-index: 1000;
+        filter: drop-shadow(1px 1px 1px rgba(14, 14, 14, 0.42));
+        display: block;
+    }
+
+    #thumb-container {
+        height: 100vh;
+        /*background-color: rgba(225, 225, 225, 0.25);*/
+        width: 17px;
+        position: fixed;
+        right: 0;
+        z-index: 999;
+        border-radius: 15px;
+        /*border: 0.5px solid #b9b9b9;*/
+        opacity: 0;
+        transition: .8s ease all;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    #scrollbar-thumb {
+        display: none;
     }
 }
 
