--- a/css/styles.css
+++ b/css/styles.css
@@ -723,7 +723,7 @@ footer {
     align-items: center;
     background-color: #0e0e0e;
     color: #f4f4f4;
-    padding: 40px 0 11px 0;
+    padding: 40px 0 0 0;
     border-top: solid #f4f4f4 0.5px;
 }
 
@@ -793,7 +793,6 @@ footer li {
     background-color: #c7c7c7;
     width: 100%;
     text-align: center;
-    margin-bottom: -13px;
     padding: 5px 0;
 }
 
